--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,14 @@
             <artifactId>groupdocs-conversion</artifactId>
             <version>22.12</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-log4j2</artifactId>
+            <version>2.15.0</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
